--- a/정새영/assets/css/style.css
+++ b/정새영/assets/css/style.css
@@ -51,6 +51,10 @@
     position: relative;
 }
 
+.center__text .t1 .line .word:nth-child(2) .char:nth-child(1) {
+    padding-left: 28.8vw;
+}
+
 .center__text .t2 .line .word:nth-child(3) .char:nth-child(1) {
     padding-left: 22.4vw;
 }
@@ -64,6 +68,18 @@
 }
 
 .center__text .i1 {
+    width: 27vw;
+    height: 7.4vw;
+    background-image: url(https://source.unsplash.com/random/?green);
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    left: 14vw;
+    top: .6vw;
+
+}
+
+.center__text .i2 {
     width: 20vw;
     height: 7.4vw;
     background-image: url(https://source.unsplash.com/random/?programming);
@@ -72,14 +88,14 @@
     position: absolute;
     left: 34vw;
     top: 10.6vw;
-    border-radius: 100px;
+
 }
 
-.center__text .i2 {
+.center__text .i3 {
     width: 19vw;
     height: 7.4vw;
     position: absolute;
-    border-radius: 100px;
+
     left: 22vw;
     top: 20.6vw;
     background-image: url(https://source.unsplash.com/random/?abstract);
@@ -87,7 +103,7 @@
     background-position: center center;
 }
 
-.center__text .i3 {
+.center__text .i4 {
     width: 7.4vw;
     height: 7.4vw;
     border-radius: 50%;
@@ -103,10 +119,41 @@
     padding: 5%;
 }
 
-#section2 {
-    margin-top: 100vh;
-    height: 3000px;
-    background-color: #000;
-    position: relative;
-    z-index: 10;
+#section1 .img {
+    overflow: hidden;
+    border-radius: 100px;
+    box-shadow: 0 0 0 0 #00000084 inset;
+    transition: box-shadow 0.3s;
+}
+
+#section1 .img span {
+    font-family: 'GmarketSans';
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 10;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    color: #fff;
+    transform: translateX(-50%);
+}
+
+#section1 .img:hover {
+    box-shadow: 0 0 15px 20px #00000021 inset;
+}
+
+#section1 .img:hover::after {
+    background: #00000025;
+    transition: background 0.3s;
+}
+
+#section1 .img::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #00000000;
+    transition: background 0.3s;
 }
